tests/sksl/errors/WhileFalseIsEvaluated.sksl
void main() {
    while (1 + 2 != 3) {
        sk_FragColor = bool4(true);
    }
}
